# match-predictor

./: .dvcignore  .gitignore  README.md  dvc.yaml  pyproject.toml
.dvc/: config
notebooks/: eda_liga_mx.ipynb  experiments.ipynb
src/data/: process.py  scrape.py
